Star data entered. Dropdown draft.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,58 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.3/fabric.min.js"></script> -->
   <script src="./fabric.min.js"></script>
   <title>HR Diagram</title>
+  <link rel="icon" href="data:image/svg+xml,
+  <svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>
+    <text y=%22.9em%22 font-size=%2290%22>🌠</text>
+  </svg>">
   <style>
     body {
       margin: 0;
       overflow: hidden;
     }
 
+    #starClusterDropdown {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      background-color: #f1f1f1;
+      z-index: 1;
+    }
+
+    #hrContainer {
+      position: absolute;
+      top: 60px; /* adjust based on dropdown height */
+      left: 0;
+      width: 100%;
+      height: calc(100vh - 60px);
+      border: 1px solid #ccc;
+      background-color: #fff;
+    }
+
     canvas {
       display: block;
+      margin: 0 auto;
       border: 1px solid #ccc;
+      flex: 1; /* fills remaining space */
     }
   </style>
 </head>
 <body>
-  <canvas id="hrCanvas"></canvas>
+  <div id="starClusterDropdown">
+    <label for="clusterSelect">Choose star clusters:</label>
+    <select id="clusterSelect" multiple>
+      <option value="1">Cluster 1</option>
+      <option value="2">Cluster 2</option>
+      <option value="100">Cluster 100</option>
+    </select>
+  </div>
+  <div id="hrContainer"> 
+    <!-- style="position: absolute; bottom: 0; left: 0; width: 100%; height: 100%;"> -->
+    <canvas id="hrCanvas"></canvas>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
