--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     }
 
     #desc {
-      position: fixed;
+      /* position: fixed;
       top: 0;
-      right: 0;
+      right: 0; */
       display: flex;
       padding: 10px;
     }
